<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnHello"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_hello"
                    android:onClick="btnHello"
                    android:src="@drawable/hello"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnCount"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_count"
                    android:onClick="btnCount"
                    android:src="@drawable/count"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Count"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnFibonacci"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_fibonacci"
                    android:onClick="btnFibonacci"
                    android:src="@drawable/fibonacci"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fibonacci"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnSianida"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_pro_sianida"
                    android:onClick="btnSianida"
                    android:src="@drawable/sianida"
                    tools:ignore="UsingOnClickInXml" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnTwoActivity"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_pro_two_activity"
                    android:onClick="btnTwoActivity"
                    android:src="@drawable/chat"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chat"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnSetAlarm"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_pro_set_alarm"
                    android:onClick="btnSetAlarm"
                    android:src="@drawable/alarm"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alarm"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnMaps"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_maps"
                    android:onClick="btnMaps"
                    android:src="@drawable/maps"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maps"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnMovie"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_label_movie"
                    android:onClick="btnMovie"
                    android:src="@drawable/movie"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Movie"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/btnNone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/button_none"
                    android:onClick="btnNone"
                    android:src="@drawable/none"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>